# diff_stokes_flow

./: .gitmodules  .travis.yml  LICENSE  README.md  environment.yml  install.sh
cpp/: CMakeLists.txt  main.cpp
cpp/core/include/cell/: cell.h
cpp/core/include/common/: common.h  config.h
cpp/core/include/scene/: scene.h
cpp/core/include/shape/: bezier.h  parametric_shape.h  plane.h  polar_bezier.h  shape_composition.h  sphere.h  spline.h  spline2d.h
cpp/core/include/solver/: pardiso_solver.h
cpp/core/src/: py_diff_stokes_flow_core.i
cpp/core/src/cell/: cell.cpp
cpp/core/src/common/: common.cpp  geometry.cpp
cpp/core/src/scene/: scene.cpp
cpp/core/src/shape/: bezier.cpp  parametric_shape.cpp  plane.cpp  polar_bezier.cpp  shape_composition.cpp  sphere.cpp  spline.cpp  spline2d.cpp
cpp/core/src/solver/: pardiso_solver.cpp
python/: .gitignore
python/example/: amplifier_2d.py  bezier_2d.py  cell_2d.py  draw_design.py  draw_discretization.py  draw_optimization.py  draw_pipeline.py  fluidic_force_density_2d.py  fluidic_traction_density_2d.py  pbrt_renderer_demo.py  refinement.py  run_all_tests.py  run_demo.py  scene_2d.py  shape_composition_2d.py  shape_composition_3d.py  spline2d.py  spline_2d.py
python/example/config/: amplifier.txt  flow_averager.txt  fluidic_switch.txt  fluidic_twister.txt  funnel.txt  pipe.txt  superposition_gate.txt
python/example/shape_composition_2d/: sdf_master.npy
python/example/spline2d/: sdf_master.npy
python/py_diff_stokes_flow/common/: common.py  display.py  grad_check.py  renderer.py
(+13 files in other folders)
